--- a/css/main.css
+++ b/css/main.css
@@ -89,12 +89,16 @@ img {
   align-items: center;
 }
 
+.nav {
+  display: none;
+}
+
 .nav-list {
   display: flex;
 }
 
 .contact {
-  display: flex;
+  display: none;
   margin-left: auto;
 }
 @media screen and (min-width: 768px) {
@@ -215,6 +219,82 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.menu-btn {
+  background-color: transparent;
+  padding: 0;
+  display: block;
+  margin-left: auto;
+}
+
+.mob-container {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .mob-container {
+    width: 480px;
+  }
+}
+
+.mob-menu {
+  position: fixed;
+  background-color: #ffffff;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
+.mob-menu__button-close {
+  position: absolute;
+  background-color: transparent;
+  padding: 0;
+  top: 10px;
+  right: 15px;
+}
+
+.mob-menu-list {
+  padding-top: 48px;
+  padding-left: 40px;
+}
+
+.mob-menu-list__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-menu-list__item + .mob-menu-list__item {
+  margin-top: 32px;
+}
+
+.mob-menu-contact {
+  padding-left: 40px;
+}
+
+.mob-menu-contact__item + .mob-menu-contact__item {
+  margin-top: 32px;
+}
+
+.mob-menu-contact__link-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mob-menu-contact__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
 .section {
   padding: 60px 0;
 }
@@ -226,7 +306,42 @@ img {
 
 .hero {
   background-color: var(--main-background-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herou-img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herou-img-mob.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 12px 0;
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herou-img-mob-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herou-img-tab.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herou-img-tab-2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herou-img.jpg);
+    padding: 94px 0;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herou-img-2x.jpg);
+  }
 }
 
 .hero__content {
@@ -391,6 +506,12 @@ img {
 .team__title {
   margin-bottom: 30px;
 }
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.16;
+  }
+}
 
 .team-list__after-title {
   font-weight: 500;
@@ -433,6 +554,17 @@ img {
   .team-list__item {
     width: calc(50% - 30px);
     margin-right: 30px;
+  }
+  .team-list__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    max-width: 270px;
+  }
+  .team-list__item:nth-last-child(-n+4) {
+    margin-bottom: 0;
   }
 }
 
