--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,11 +4,14 @@
 
 .header{
     height: 80px;
-display: flex;
+    display: flex;
     .container {
     display: flex;
     align-items: center;
 }
+}
+.nav {
+    display: none;
 }
 
 .nav-list {
@@ -16,7 +19,8 @@ display: flex;
 }
 
 .contact {
-    display: flex;
+    display: none;
+    // display: flex;
     margin-left: auto;
     @include tablet {
         flex-direction: column;
@@ -28,18 +32,18 @@ display: flex;
 
 .header__logo {
     font-family: 'Raleway', sans-serif;
-font-weight: 700;
-font-size: 24px;
-line-height: 1.16;
-letter-spacing: 0.03em;
-margin-right: 93px;
-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    margin-right: 93px;
+    color: var(--accent-color);
     @include tablet {
         margin-right: 88px;
     }
     @include desktop {
-      font-size: 26px;
-line-height: 1.19;  
+        font-size: 26px;
+        line-height: 1.19;  
     }
 }
 
@@ -48,11 +52,11 @@ color: #000000;
 }
 
 .nav-list__link {
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
-color: var(--main-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--main-color);
     &:hover, 
     &:focus {
     color: var(--accent-color);
@@ -126,4 +130,75 @@ margin-right: 10px;
 }
 }
 
+.menu-btn {
+    background-color: transparent;
+    padding: 0;
+    display: block;
+    margin-left: auto;
+}
 
+.mob-container {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    @include phone {
+        width: 480px;
+    }
+}
+
+.mob-menu {
+    position: fixed;
+    background-color: #ffffff;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
+.mob-menu__button-close {
+    position: absolute;
+    background-color: transparent;
+    padding: 0;
+    top: 10px;
+    right: 15px;
+}
+
+.mob-menu-list {
+    padding-top: 48px;
+    padding-left: 40px;
+}
+
+.mob-menu-list__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #212121;
+}
+.mob-menu-list__item + .mob-menu-list__item {
+    margin-top: 32px;
+}
+
+.mob-menu-contact {
+    padding-left: 40px;
+}
+
+.mob-menu-contact__item + .mob-menu-contact__item {
+    margin-top: 32px;
+}
+
+.mob-menu-contact__link-tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+}
+
+.mob-menu-contact__link {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+}
