--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -10,17 +10,21 @@
 .team__title {
     // margin-bottom: 50px;
     margin-bottom: 30px;
+    @include desktop {
+        font-size: 36px;
+        line-height: 1.16;
+    }
 }
 
 .team-list__after-title {
     font-weight: 500;
-font-size: 16px;
-line-height: 1.18;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--main-color);
-margin-bottom: 10px;
-display: block;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-color);
+    margin-bottom: 10px;
+    display: block;
 }
 
 .team-list {
@@ -41,17 +45,27 @@ display: block;
 
 .team-list__item {
     margin-right: 0;
-    // max-width: 270px;
     background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
     &:not(:last-child) {
 //     margin-right: var(--typical-gap);
         margin-bottom: 30px;
-        }
+    }
+        
         @include tablet {
-  width: calc(50% - 30px);
-  margin-right: 30px;
+            width: calc(50% - 30px);
+            margin-right: 30px;
+            &:nth-last-child(-n +2) {
+                margin-bottom: 0;
+            }
+        }
+
+        @include desktop {
+max-width: 270px;
+  &:nth-last-child(-n +4) {
+    margin-bottom: 0;
+  }
         }
 }
 
