--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,6 +12,9 @@
 }
 .nav {
     display: none;
+    @include tablet {
+        display: flex;
+    }
 }
 
 .nav-list {
@@ -20,10 +23,10 @@
 
 .contact {
     display: none;
-    // display: flex;
     margin-left: auto;
     @include tablet {
         flex-direction: column;
+        display: flex;
     }
     @include desktop {
         flex-direction: row;
@@ -135,15 +138,17 @@ margin-right: 10px;
     padding: 0;
     display: block;
     margin-left: auto;
+    @include tablet {
+        display: none;
+    }
 }
 
-.mob-container {
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
-    @include phone {
-        width: 480px;
+.menu-btn__icon {
+    &:focus,
+    &:hover {
+        fill: #2196F3;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
     }
 }
 
@@ -153,6 +158,23 @@ margin-right: 10px;
     top: 0;
     height: 100vh;
     width: 100vw;
+    z-index: 5;
+    transition-property: transform, opacity, visibility;
+    transition-duration: 600ms;
+    transition-timing-function: ease;
+    transform: translateX(0);
+    >.container {
+        position: relative;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        height: 100%;
+        overflow: auto;
+        justify-content: space-between;
+    }
+    &.is-hidden {
+        transform: translateX(-100%);
+    }
 }
 
 .mob-menu__button-close {
@@ -163,9 +185,18 @@ margin-right: 10px;
     right: 15px;
 }
 
+.mob-menu__icon-close {
+    &:focus,
+    &:hover {
+        fill: #2196F3;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+    }
+}
+
 .mob-menu-list {
     padding-top: 48px;
-    padding-left: 40px;
+    padding-left: 25px;
 }
 
 .mob-menu-list__link {
@@ -174,13 +205,22 @@ margin-right: 10px;
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: #212121;
+    &:focus,
+    &:hover {
+    color: #2196F3;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+    }
+    &.active {
+        color: #2196F3;
+    }
 }
 .mob-menu-list__item + .mob-menu-list__item {
     margin-top: 32px;
 }
 
 .mob-menu-contact {
-    padding-left: 40px;
+    padding-left: 25px;
 }
 
 .mob-menu-contact__item + .mob-menu-contact__item {
@@ -201,4 +241,33 @@ margin-right: 10px;
     line-height: 1.16;
     letter-spacing: 0.02em;
     color: #757575;
+}
+
+.mob-menu-soc {
+    display: flex;
+    margin-top: 64px;
+    padding-left: 25px;
+    padding-bottom: 48px;
+}
+
+.mob-menu-soc__item {
+    position: relative;
+    &:first-child {
+     padding-right: 10px;   
+    }
+}
+
+.mob-menu-soc__item + .mob-menu-soc__item {
+padding-left: 10px;
+border-left: 1px solid rgba(33, 33, 33, 0.2);
+padding-right: 10px;
+}
+
+.mob-menu-soc__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+    
 }
