--- a/css/main.css
+++ b/css/main.css
@@ -721,11 +721,17 @@ img {
 .logo-link__text {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
   color: var(--accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .logo-link__text {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .logo-link__studio {
@@ -736,6 +742,13 @@ img {
   background-color: var(--main-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-wrap {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 .address-list__link {
@@ -763,7 +776,15 @@ img {
 }
 
 .footer-content {
-  display: flex;
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-content {
+    display: flex;
+    padding-top: 0;
+  }
 }
 
 .icons-list__link {
@@ -792,17 +813,31 @@ img {
 
 .icons-list {
   display: flex;
+  justify-content: center;
 }
 
 .contacts-block {
-  margin-right: 70px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .contacts-block {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts-block {
+    margin-right: 70px;
+    padding-top: 60px;
+    text-align: left;
+    width: 232px;
+  }
 }
 
-.soc-icons {
-  padding-top: 72px;
-  padding-bottom: 100px;
+@media screen and (min-width: 1200px) {
+  .soc-icons {
+    padding-top: 72px;
+    text-align: left;
+  }
 }
 
 .soc-icons__title {
@@ -816,15 +851,29 @@ img {
 }
 
 .subscribe_margin {
-  margin-left: 93px;
-  margin-top: 72px;
-  width: 100%;
+  margin-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe_margin {
+    margin-left: 93px;
+    margin-top: 72px;
+  }
+}
+
+.subscribe {
+  text-align: left;
 }
 
 .subscribe__input {
-  max-width: 358px;
   width: 100%;
-  margin-right: 12px;
+  max-width: 450px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .subscribe__title {
@@ -835,10 +884,25 @@ img {
   text-transform: uppercase;
   color: #FFFFFF;
   margin-bottom: 20px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__title {
+    text-align: left;
+  }
 }
 
 .subscribe__form {
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__form {
+    flex-direction: row;
+    align-items: normal;
+  }
 }
 
 .subscribe__email {
