--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,11 +1,15 @@
 .logo-link__text {
     font-family: 'Raleway', sans-serif;
 font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
+font-size: 24px;
+line-height: 1.16;
 letter-spacing: 0.03em;
 margin-bottom: 20px;
-color: var(--accent-color)
+color: var(--accent-color);
+    @include desktop {
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
 .logo-link__studio {
@@ -16,6 +20,13 @@ color: #FFFFFF;
     background-color: var(--main-background-color);
     padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.footer-wrap {
+    @include tablet {
+        display: flex;
+        justify-content: space-around;
+    }
 }
 
 .address-list__link {
@@ -43,7 +54,15 @@ color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-content {
-    display: flex;
+
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include desktop {
+        display: flex;
+        padding-top: 0;
+    }
 }
 
 .icons-list__link {
@@ -73,17 +92,29 @@ color: rgba(255, 255, 255, 0.6);
 
 .icons-list {
     display: flex;
+
+    justify-content: center;
+        
 }
 
 .contacts-block {
-    margin-right: 70px;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    margin-bottom: 60px;
+        @include tablet {
+            margin-bottom: 0;
+        }
+        @include desktop {
+            margin-right: 70px;
+            padding-top: 60px;
+            text-align: left;
+            width: 232px;
+        }
 }
 
 .soc-icons {
+    @include desktop {
     padding-top: 72px;
-    padding-bottom: 100px;
+    text-align: left;
+    }
 }
 
 .soc-icons__title {
