--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,13 +1,23 @@
 .subscribe_margin {
+    margin-top: 60px;
+    @include desktop {
     margin-left: 93px;
     margin-top: 72px;
-   width: 100%;
+    }
+}
+
+.subscribe {
+    text-align: left;
 }
 
 .subscribe__input {
-    max-width: 358px;
     width: 100%;
-    margin-right: 12px;
+    max-width: 450px;
+    margin-bottom: 20px;
+        @include desktop {
+            width: 358px;
+            margin-right: 12px;
+        }
 }
 
 .subscribe__title {
@@ -18,10 +28,23 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #FFFFFF;
 margin-bottom: 20px;
+text-align: center;
+    @include desktop {
+        text-align: left;
+    }
 }
 
 .subscribe__form {
     display: flex;
+
+    justify-content: center;
+flex-direction: column;
+align-items: center;
+    @include desktop {
+        flex-direction: row;
+        align-items: normal;
+    }
+
 }
 
 .subscribe__email {
