--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,16 +1,32 @@
 .works-list {
     display: flex;
-    flex-wrap: wrap;
+flex-wrap: nowrap;
+flex-direction: column;
+    @include tablet {
+        flex-wrap: wrap;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+    @include desktop {
     margin-left: -30px;
+    }
+
 }
 
 .works-item {
-width: calc(100% / 3 - 30px);
-margin-left: 30px;
 cursor: pointer;
 display: flex;
 flex-direction: column;
 overflow: hidden;
+width: 100%;
+    @include tablet {
+        width: calc(100% / 2 - 15px);
+    }
+    @include desktop {
+        width: calc(100% / 3 - 30px);
+        margin-left: 30px;
+    }
+
     &:hover,
     &:focus {
 background: #FFFFFF;
@@ -19,9 +35,14 @@ transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-    &:nth-child(-n + 6) {
-    margin-bottom: var(--typical-gap);
-}
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+    @include desktop {
+        &:nth-child(n + 7) {
+        margin-bottom: 0;
+        }
+    }
 }
 
 .works-cover-wrap {
@@ -34,7 +55,7 @@ transition-property: box-shadow;
     position: absolute;
     height: 100%;
     padding: 63px 24px;
-    top: 0;
+    top: 1px;
     left: 0;
     font-weight: 400;
 font-size: 18px;
@@ -70,4 +91,5 @@ background: #FFFFFF;
 border: 1px solid #EEEEEE;
 padding: 20px 24px;
 border-top: 0;
+flex-grow: 1;
 }
