--- a/css/main.css
+++ b/css/main.css
@@ -558,11 +558,6 @@ img {
   padding-bottom: 27px;
 }
 
-.team-content {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
 .team {
   background-color: #F5F4FA;
 }
@@ -685,14 +680,32 @@ img {
 }
 
 .clients-list {
+  flex-wrap: wrap;
+  justify-content: center;
   display: flex;
+  gap: 30px;
+}
+
+.clients-list__item {
+  width: calc(50% - 15px);
+  max-width: 210px;
+}
+@media screen and (min-width: 768px) {
+  .clients-list__item {
+    width: calc(33.3333333333% - 15px);
+    max-width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    max-width: 170px;
+  }
 }
 
 .clients-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 92px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
@@ -702,10 +715,6 @@ img {
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-list__item + .clients-list__item {
-  margin-left: var(--typical-gap);
 }
 
 .clients-list__icon {
@@ -978,8 +987,28 @@ img {
 
 .menu .menu-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .menu .menu-list {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu .menu-list {
+    margin-bottom: 50px;
+  }
+}
+
+.menu-item:nth-child(-n+3) {
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 768px) {
+  .menu-item:nth-child(-n+3) {
+    margin-bottom: 0;
+  }
 }
 
 .menu-item:not(:last-child) {
@@ -988,17 +1017,39 @@ img {
 
 .works-list {
   display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .works-list {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .works-list {
+    margin-left: -30px;
+  }
 }
 
 .works-item {
-  width: calc(33.3333333333% - 30px);
-  margin-left: 30px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .works-item {
+    width: calc(50% - 15px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .works-item {
+    width: calc(33.3333333333% - 30px);
+    margin-left: 30px;
+  }
 }
 .works-item:hover, .works-item:focus {
   background: #FFFFFF;
@@ -1007,8 +1058,13 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.works-item:nth-child(-n+6) {
-  margin-bottom: var(--typical-gap);
+.works-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .works-item:nth-child(n+7) {
+    margin-bottom: 0;
+  }
 }
 
 .works-cover-wrap {
@@ -1021,7 +1077,7 @@ img {
   position: absolute;
   height: 100%;
   padding: 63px 24px;
-  top: 0;
+  top: 1px;
   left: 0;
   font-weight: 400;
   font-size: 18px;
@@ -1057,6 +1113,7 @@ img {
   border: 1px solid #EEEEEE;
   padding: 20px 24px;
   border-top: 0;
+  flex-grow: 1;
 }
 
 .backdrop {
@@ -1083,14 +1140,20 @@ img {
   top: 50%;
   left: 50%;
   transform: rotate(360deg) translate(-50%, -50%) scale(1);
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   background-color: #FFFFFF;
   border-radius: 7px;
   transition: transform 400ms;
   padding-top: 44px;
   padding-right: 40px;
   padding-left: 40px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__button-close {
@@ -1204,8 +1267,8 @@ img {
 
 .modal-form__checkbox-label {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: #757575;
   display: flex;
@@ -1219,6 +1282,12 @@ img {
   border: 2px solid #212121;
   border-radius: 2px;
   margin-right: 8.38px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-form__checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form__checkbox-icon:checked + .modal-form__checkbox-label::before {
