--- a/sass/components/_portfolio-menu.scss
+++ b/sass/components/_portfolio-menu.scss
@@ -31,9 +31,24 @@ transition-property: background, color, box-shadow;
 .menu
 .menu-list {
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+        @include tablet {
+            justify-content: center;
+            margin-bottom: 30px;
+        }
+        @include desktop {
+            margin-bottom: 50px;
+        }
 }
+
+.menu-item:nth-child(-n + 3) {
+    margin-bottom: 15px;
+    @include tablet {
+    margin-bottom: 0;
+    }
+}
+
 .menu-item:not(:last-child) {
 margin-right: 8px;
 }
