--- a/css/main.css
+++ b/css/main.css
@@ -117,25 +117,28 @@ img {
   }
 }
 
+.logo {
+  margin-right: 93px;
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+
 .header__logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.03em;
-  margin-right: 93px;
   color: var(--accent-color);
-}
-@media screen and (min-width: 768px) {
-  .header__logo {
-    margin-right: 88px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header__logo {
-    font-size: 26px;
-    line-height: 1.19;
-  }
 }
 
 .header__logo-studio {
@@ -154,6 +157,9 @@ img {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-list__link.active {
+  color: var(--accent-color);
 }
 .nav-list__link.active::after {
   content: "";
@@ -321,6 +327,11 @@ img {
   letter-spacing: 0.02em;
   color: #2196F3;
 }
+@media screen and (max-width: 479px) {
+  .mob-menu-contact__link-tel {
+    font-size: 30px;
+  }
+}
 
 .mob-menu-contact__link {
   font-weight: 500;
@@ -356,6 +367,11 @@ img {
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: #2196F3;
+}
+@media screen and (max-width: 479px) {
+  .mob-menu-soc__link {
+    font-size: 12px;
+  }
 }
 
 .section {
@@ -462,9 +478,6 @@ img {
   margin-bottom: 30px;
 }
 
-.about-list {
-  margin-bottom: -30px;
-}
 @media screen and (min-width: 768px) {
   .about-list {
     display: flex;
@@ -475,6 +488,9 @@ img {
 
 .about-list__item {
   margin-bottom: 30px;
+}
+.about-list__item:last-child {
+  margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
   .about-list__item {
@@ -513,6 +529,12 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--second-main-color);
+}
+
+@media screen and (max-width: 1200px) {
+  .work {
+    display: none;
+  }
 }
 
 .work__title, .team__title, .clients__title {
@@ -726,13 +748,16 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-logo {
+  margin-bottom: 20px;
+}
+
 .logo-link__text {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.03em;
-  margin-bottom: 20px;
   color: var(--accent-color);
 }
 @media screen and (min-width: 1200px) {
@@ -1148,6 +1173,12 @@ img {
   padding-right: 40px;
   padding-left: 40px;
 }
+@media screen and (max-width: 479px) {
+  .modal {
+    width: 290px;
+    min-height: 580px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
@@ -1185,6 +1216,12 @@ img {
   letter-spacing: 0.03em;
   color: #212121;
   margin-bottom: 12px;
+}
+@media screen and (max-width: 479px) {
+  .modal__title {
+    font-size: 16px;
+    letter-spacing: 0.04em;
+  }
 }
 
 .modal-form__input {
@@ -1281,6 +1318,14 @@ img {
   border: 2px solid #212121;
   border-radius: 2px;
   margin-right: 8.38px;
+  flex-shrink: 0;
+}
+@media screen and (max-width: 479px) {
+  .modal-form__checkbox-label {
+    font-size: 9px;
+    line-height: 1.16;
+    letter-spacing: 0.09em;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal-form__checkbox-label {
@@ -1315,4 +1360,9 @@ img {
   border-radius: 4px;
   padding: 10px 55px;
   margin-top: 30px;
+}
+@media screen and (max-width: 479px) {
+  .modal-form__checkbox-btn {
+    padding: 8px 20px;
+  }
 }/*# sourceMappingURL=main.css.map */
