--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -9,7 +9,6 @@
 }
 
 .about-list {
-    margin-bottom: -30px;
     @include tablet {
     display: flex;
     flex-wrap: wrap;
@@ -19,6 +18,9 @@
 
 .about-list__item {
     margin-bottom: 30px;
+    &:last-child {
+        margin-bottom: 0;
+    }
      @include tablet {
         width: calc(100% / 2 - 30px);
         margin-right: 30px;
