--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,13 @@
+.footer-logo {
+    margin-bottom: 20px;
+}
+
 .logo-link__text {
     font-family: 'Raleway', sans-serif;
 font-weight: 700;
 font-size: 24px;
 line-height: 1.16;
 letter-spacing: 0.03em;
-margin-bottom: 20px;
 color: var(--accent-color);
     @include desktop {
         font-size: 26px;
