--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -33,14 +33,8 @@
     }
 }
 
-.header__logo {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
+.logo {
     margin-right: 93px;
-    color: var(--accent-color);
     @include tablet {
         margin-right: 88px;
     }
@@ -48,6 +42,23 @@
         font-size: 26px;
         line-height: 1.19;  
     }
+}
+
+.header__logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    // margin-right: 93px;
+    color: var(--accent-color);
+    // @include tablet {
+    //     margin-right: 88px;
+    // }
+    // @include desktop {
+    //     font-size: 26px;
+    //     line-height: 1.19;  
+    // }
 }
 
 .header__logo-studio {
@@ -66,6 +77,9 @@ color: #000000;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &.active {
+        color: var(--accent-color);
     }
     &.active::after {
     content: "";
@@ -233,6 +247,9 @@ margin-right: 10px;
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: #2196F3;
+        @media screen and (max-width:479px) {
+            font-size: 30px;
+        }
 }
 
 .mob-menu-contact__link {
@@ -269,5 +286,7 @@ padding-right: 10px;
     line-height: 1.22;
     letter-spacing: 0.02em;
     color: #2196F3;
-    
+        @media screen and (max-width:479px) {
+            font-size: 12px;
+        }
 }
