--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -91,7 +91,13 @@ justify-content: center;
     border: 2px solid #212121;
     border-radius: 2px;
     margin-right: 8.38px;
+    flex-shrink: 0;
 }
+    @media screen and (max-width:479px) {
+        font-size: 9px;
+line-height: 1.16;
+letter-spacing: 0.09em;
+    }
     @include desktop {
         font-size: 14px;
         line-height: 1.71;
@@ -124,4 +130,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 padding: 10px 55px;
 margin-top: 30px;
+    @media screen and (max-width:479px) {
+        padding: 8px 20px;
+    }
 }
