--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,6 +11,10 @@
     padding-top: 44px;
     padding-right: 40px;
     padding-left: 40px;
+        @media screen and (max-width:479px) {
+            width: 290px;
+            min-height: 580px;
+        }
         @include desktop {
             width: 528px;
             min-height: 581px;
@@ -45,4 +49,8 @@ text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
 margin-bottom: 12px;
+    @media screen and (max-width:479px) {
+        font-size: 16px;
+        letter-spacing: 0.04em;
+    }
 }
