--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,3 +1,9 @@
+.work {
+    @media screen and (max-width:1200px) {
+        display: none;
+    }
+}
+
 .work__title, .team__title, .clients__title {
     font-weight: 700;
     font-size: 28px;
